--- a/evaluacion_final.ipynb
+++ b/evaluacion_final.ipynb
@@ -14,17 +14,13 @@
     "\n",
     "# -----------------------------------------------------------------------\n",
     "\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.experimental import enable_iterative_imputer\n",
     "from sklearn.impute import IterativeImputer\n",
     "from sklearn.impute import KNNImputer\n",
     "# ------------------------------------------------------------------------------\n",
     "\n",
     "import scipy.stats as stats\n",
-    "from scipy.stats import ttest_ind, norm, chi2_contingency\n",
     "from scipy.stats import shapiro\n",
     "from scipy.stats import mannwhitneyu\n",
-    "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "# -----------------------------------------------------------------------\n",
     "import seaborn as sns\n",
@@ -5300,7 +5296,7 @@
     "#Poner en minúsculas las columnas:\n",
     "#Usaremos una de las funciones que tenemos en el soporte:\n",
     "\n",
-    "sp.columna_min(df_union)"
+    "sp.col_minuscula(df_union)"
    ]
   },
   {
