--- a/evaluacion_final.ipynb
+++ b/evaluacion_final.ipynb
@@ -53,8 +53,8 @@
    "source": [
     "#Leer csv:\n",
     "\n",
-    "flight = sp.leer_cvs(\"files\", \"Customer Flight Activity\")\n",
-    "loyalty = sp.leer_cvs(\"files\", \"Customer Loyalty History\")"
+    "flight = sp.leer_csv(\"files\", \"Customer Flight Activity\")\n",
+    "loyalty = sp.leer_csv(\"files\", \"Customer Loyalty History\")"
    ]
   },
   {
@@ -7911,7 +7911,7 @@
     }
    ],
    "source": [
-    "df = sp.leer_cvs(\"files\", \"customer\")\n",
+    "df = sp.leer_csv(\"files\", \"customer\")\n",
     "df.head(2)"
    ]
   },
@@ -8488,7 +8488,7 @@
    "source": [
     "#Abrimos el CSV:\n",
     "\n",
-    "df = sp.leer_cvs(\"files\", \"customer\")\n",
+    "df = sp.leer_csv(\"files\", \"customer\")\n",
     "df.head(2)"
    ]
   },
