--- a/evaluacion_final.ipynb
+++ b/evaluacion_final.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#IMPORTACIONES\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from src import soporte_limpieza as sp\n",
+    "from src import soporte as sp\n",
     "# -----------------------------------------------------------------------\n",
+    "from sklearn.experimental import enable_iterative_imputer\n",
     "from sklearn.impute import IterativeImputer\n",
-    "from sklearn.impute import KNNImputer\n",
     "# ------------------------------------------------------------------------------\n",
     "import scipy.stats as stats\n",
     "from scipy.stats import shapiro\n",
@@ -47,9 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El archivo se ha cargado con éxito.\n",
+      "El archivo se ha cargado con éxito.\n"
+     ]
+    }
+   ],
    "source": [
     "#Leer csv:\n",
     "\n",
